Added regression-suite.yml file